--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <body>
 
 	<h1>Victorian Subdivisions</h1>
+	<img src="images/intrax.png" alt="Intrax Logo" style="width:180px;height:54px;
+            position: absolute;
+            left: 0px;
+            top: 0px;">
 
   	<div id="map"></div>
 
